Fix button pos on mobile and desktop

--- a/CSS/operatingSystemPages/Server2003.css
+++ b/CSS/operatingSystemPages/Server2003.css
@@ -111,8 +111,8 @@ select:focus {
     height:85vh;
   }
   button[type="submit"] {
-    right: auto;
-    bottom: 17rem;
+    margin-top: 5%;
+    position:static;
   }
   #logo {
     max-width: 70vw;
