--- a/CSS/os.css
+++ b/CSS/os.css
@@ -353,8 +353,6 @@ body {
 
 #consumerflex {
     width:100%;
-    position: relative;
-    height:180px;
     display: flex;
     gap: 10px;
     flex-wrap:wrap;
@@ -364,9 +362,7 @@ body {
 }
 
 #businessflex {
-    position: relative;
     width:100%;
-    height:90px;
     display: flex;
     gap: 10px;
     flex-wrap:wrap;
@@ -396,7 +392,7 @@ body {
     margin:0;
     font-family: 'Rubik';
     text-align:center;
-    font-size:large;
+    font-size:1vw
 }
 
 /** Mozilla Firefox */
